refactor: wire up navbar buttons to routes and handle whitespaces in photos CS string
(comma sepparated)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,12 +15,11 @@
 /*------------------------------------------ DOCUMENT */
 
 html, body {
+    scroll-behavior: smooth;
     overflow-x: hidden;
-    /* Prevent scroll on narrow devices */
 }
 
 body {
-    /* padding-top: 56px; */
     background-color: var(--main-bg-color);
     color: var(--accent-dark-hover);
 }
