chore: fix spelling portofolio -> portfolio

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -456,7 +456,7 @@ h1, h2, h3 {
 
 /*------------------------------------------ PORTOFOLIO */
 
-#portofolio .separator {
+#portfolio .separator {
     margin-bottom: 2rem;
 }
 
