--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 <!-- Projects SECTION -->
-<section id="portofolio">
+<section id="portfolio">
     <div class="page-title-container bg-accent">
-        <h2 class="text-shadow">Portofolio</h2>
+        <h2 class="text-shadow">Portfolio</h2>
     </div>
     <!-- CREDIT: https://codepen.io/xyzzyestudioweb/pen/JgdKOR -->
     <svg class="separator" width="100%" height="60" viewBox="0.1 0.1 180 40" preserveAspectRatio="none">
