--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="{{ url_for('home') }}#testimonials">Testimonials</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('portofolio') }}">Portofolio</a>
+                        <a class="nav-link" href="{{ url_for('portfolio') }}">Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Blog</a>
