--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="{{ url_for('portfolio') }}">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Blog</a>
+                        <a class="nav-link" href="{{ url_for('blog') }}">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
