--- a/templates/project.html
+++ b/templates/project.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 {% set photos = project.photos.split(',') %}
-<!-- Projects SECTION -->
+<!-- Project Details SECTION -->
 <section id="project-details">
     <div class="page-title-container bg-accent">
         <h2 class="text-shadow">Project Details</h2>
@@ -26,6 +26,12 @@
         </g>
     </svg>
     <div class="container-xl">
+        <div class="row mb-4">
+            <div class="col">
+                <a href="{{ url_for('portfolio') }}" class="btn btn-accent-light"><i class="bi bi-arrow-left-circle"></i> Go
+                    back</a>
+            </div>
+        </div>
         <div class="row">
             <div class="col-12 col-md-6">
                 <figure>
@@ -71,7 +77,7 @@
     </svg>
     <div class="container-xl">
         <h2 class="section-title text-shadow">Gallery</h2>
-        <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4" data-masonry='{"percentPosition": true }'>
+        <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 mb-4" data-masonry='{"percentPosition": true }'>
             {% for photo in photos %}
                 <div class="col">
                     <figure>
@@ -79,6 +85,12 @@
                     </figure>
                 </div>
             {% endfor %} 
+        </div>
+        <div class="row">
+            <div class="col">
+                <a href="{{ url_for('portfolio') }}" class="btn btn-accent-light"><i class="bi bi-arrow-left-circle"></i> Go
+                    back</a>
+            </div>
         </div>
     </div>
 </section>
