feat: create Breadcrumbs template and add to relevant pages
using Flask-Breadcrumbs library

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -21,6 +21,7 @@
         </g>
     </svg>
     <div class="container-xl">
+        {% include "breadcrumbs.html" %}
         <div class="row row-cols-1">
         {% for blog in blogs %}
             <div class="col">
