--- a/static/css/style.css
+++ b/static/css/style.css
@@ -240,6 +240,20 @@ h1, h2, h3 {
     box-shadow: none;
 }
 
+/*------------------------------------------ BREADCRUMBS */
+
+nav[aria-label="breadcrumb"] {
+    background-color: var(--text-light);
+    padding: .5rem 1rem;
+    margin-bottom: 1.5rem;
+    box-shadow: inset 1px 1px 2px rgb(0 0 0 / 30%);
+    border-radius: 1rem;
+}
+
+.breadcrumb {
+    margin: 0;
+}
+
 /*------------------------------------------ HERO */
 
 #hero {
