--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -21,6 +21,7 @@
         </g>
     </svg>
     <div class="container-xl">
+        {% include "breadcrumbs.html" %}
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 justify-content-center">
             {% for project in projects %}
                 {% set photos = project.photos.split(',') %}
