--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,6 +57,23 @@ h1, h2, h3 {
     margin: 1rem 0 2rem 0;
 }
 
+/*------------------------------------------ FORMS */
+
+.form-control {
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+    border: none;
+    box-shadow: inset 1px 2px 2px rgba(0, 0, 0, .3);
+    transition: transform .3s ease-in-out, box-shadow .3s ease-in-out;
+    color: var(--accent-dark-hover);
+}
+
+.form-control:focus {
+    box-shadow: inset 3px 4px 2px rgba(var(--accent-dark-rgb), .5);
+    transform: scale(1.02);
+    color: var(--accent);
+}
+
 /*------------------------------------------ UTILS */
 
 .bg-accent {
@@ -112,8 +129,8 @@ h1, h2, h3 {
 }
 
 .btn:hover, .btn:focus, .btn:active {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
     box-shadow: 2px 3px 2px rgb(0 0 0 / 30%);
 }
 
@@ -618,6 +635,50 @@ nav[aria-label="breadcrumb"] {
     text-align: left;
 }
 
+/*------------------------------------------ CONTACT */
+
+#contact .separator {
+    margin-bottom: 2rem;
+}
+
+.card-contact-details {
+    color: var(--text-light);
+    border-radius: 1rem;
+    text-align: center;
+    border: none;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, .3);
+}
+
+.card-contact-details i {
+    font-size: 6rem;
+    text-shadow: 1px 2px 3px rgb(0, 0, 0, .5);
+}
+
+.card-contact-details .card-title {
+    color: var(--text-light);
+    text-shadow: 1px 2px 3px rgb(0, 0, 0, .5);
+}
+
+.card-contact-details dt {
+    text-align: right;
+}
+
+.card-contact-details dd {
+    text-align: left;
+}
+
+.card-contact-form {
+    background-color: var(--accent-light);
+    border-radius: 1rem;
+    text-align: center;
+    border: none;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, .3);
+}
+
+.card-contact-form #message {
+    height: 100px;
+}
+
 /*------------------------------------------ FOOTER */
 
 footer {
@@ -687,5 +748,28 @@ footer {
     }
     .card-blogs img {
         transform: scale(1.02);
+    }
+    .card-contact-details {
+        color: var(--text-dark);
+        box-shadow: none;
+        background: none;
+    }
+    .card-contact-details .card-title {
+        color: var(--text-dark);
+        text-shadow: none;
+    }
+    .card-contact-form {
+        box-shadow: none;
+    }
+    .card-contact-form .card-title {
+        font-size: calc(1.325rem + .9vw);
+        margin-top: -1rem;
+        margin-bottom: 2rem;
+    }
+    .contact-form-container {
+        padding: 0;
+        background-color: var(--accent-light);
+        padding-bottom: 3.5rem;
+        margin-bottom: -3.5rem;
     }
 }
