--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 section {
-    padding-bottom: 3rem;
+    padding-bottom: 6rem;
 }
 
 .separator {
@@ -302,6 +302,7 @@ nav[aria-label="breadcrumb"] {
     display: flex;
     flex-direction: row;
     width: auto;
+    height: 4rem;
     z-index: 1;
 }
 
@@ -688,13 +689,20 @@ footer {
     padding: 1rem;
 }
 
+footer .hero-social {
+    top: -3.5rem;
+}
+
+footer .hero-social div {
+    box-shadow: inset 0px -7px 4px -4px rgba(0, 0, 0, .4);
+}
+
 .footer-separator {
     position: absolute;
     top: -2.4rem;
     left: 0;
     height: 2.4rem;
     width: 100%;
-    filter: drop-shadow(0px -2px 1px rgba(0, 0, 0, .3));
     fill: var(--accent-dark);
 }
 
@@ -769,7 +777,19 @@ footer {
     .contact-form-container {
         padding: 0;
         background-color: var(--accent-light);
-        padding-bottom: 3.5rem;
-        margin-bottom: -3.5rem;
+        padding-bottom: 6rem;
+        margin-bottom: -6rem;
+    }
+}
+
+@media (max-width: 575px) {
+    .hero-social {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+    .hero-social div {
+        margin: 0;
     }
 }
