--- a/templates/contact.html
+++ b/templates/contact.html
@@ -30,14 +30,14 @@
                         <h4 class="card-title">Contact Info</h4>
                         <p class="card-text">
                             <dl class="row">
-                                <dt class="col-sm-5">Email</dt>
-                                <dd class="col-sm-7">{{ settings.email }}</dd>
+                                <dt class="col-5">Email</dt>
+                                <dd class="col-7">{{ settings.email }}</dd>
 
-                                <dt class="col-sm-5">Telephone</dt>
-                                <dd class="col-sm-7">{{ settings.phone }}</dd>
+                                <dt class="col-5">Telephone</dt>
+                                <dd class="col-7">{{ settings.phone }}</dd>
 
-                                <dt class="col-sm-5">Address</dt>
-                                <dd class="col-sm-7">{{ settings.address }}</dd>
+                                <dt class="col-5">Address</dt>
+                                <dd class="col-7">{{ settings.address }}</dd>
                             </dl>
                         </p>
                     </div>
@@ -68,7 +68,7 @@
                             </div>
                             <div class="form-floating">
                                 <input class="form-control" type="text" id="subject" name="subject" placeholder="Subject" aria-label="Subject field">
-                                <label for="name">Subject</label>
+                                <label for="subject">Subject</label>
                             </div>
                             <div class="form-floating">
                                 <textarea class="form-control" rows="3" id="message" name="message" placeholder="Your message here..." aria-label="Message field"></textarea>
