--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,22 @@
         </div>
     </nav>
     <main class="flex-shrink-0">
+        <!-- flash messages -->
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div class="toast-container position-fixed top-1 start-50 translate-middle-x p-3 w-75" style="z-index: 5">
+                {% for message in messages %}
+                    <div class="d-flex w-100 toast" role="alert" aria-live="assertive" aria-atomic="true">
+                        <i class="bi bi-bell-fill"></i>
+                        <div class="toast-body">
+                            <h4>{{ message }}</h4>
+                        </div>
+                        <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i class="bi bi-x-circle"></i></a>
+                    </div>
+                {% endfor %}
+                </div>
+            {% endif %}
+        {% endwith %}
             {% block content %}
             {% endblock content %}
     </main>
