--- a/templates/base.html
+++ b/templates/base.html
@@ -79,12 +79,7 @@
         <svg class="footer-separator" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 100 100" preserveAspectRatio="none">
 			<path d="M0 100 C40 0 60 0 100 100 Z"></path>
 		</svg>
-        <div class="hero-social">
-                <div><a href="#"><i class="bi bi-github"></i></a></div>
-                <div><a href="#"><i class="bi bi-linkedin"></i></a></div>
-                <div><a href="#"><i class="bi bi-facebook"></i></a></div>
-                <div><a href="#"><i class="bi bi-instagram"></i></a></div>
-            </div>
+        {% include "inc/social-links.html" %}
         <div class="container-xxl">
             <span>Place sticky footer content here.</span>
         </div>
