--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -21,7 +21,7 @@
         </g>
     </svg>
     <div class="container-xl">
-        {% include "breadcrumbs.html" %}
+        {% include "inc/breadcrumbs.html" %}
         <div class="row mb-4">
             <div class="col">
                 <a href="{{ url_for('blog') }}" class="btn btn-accent-light"><i class="bi bi-arrow-left-circle"></i> Go
