--- a/templates/contact.html
+++ b/templates/contact.html
@@ -21,7 +21,7 @@
         </g>
     </svg>
     <div class="container-xl">
-        {% include "breadcrumbs.html" %}
+        {% include "inc/breadcrumbs.html" %}
         <div class="row">
             <div class="col-md-6">
                 <div class="card bg-accent card-contact-details">
