--- a/templates/landing.html
+++ b/templates/landing.html
@@ -24,12 +24,7 @@
                     <a href="{{ settings.cv }}" class="btn btn-light btn-lg px-4">Download CV</a>
                 </div>
             </div>
-            <div class="hero-social">
-                <div><a href="#"><i class="bi bi-github"></i></a></div>
-                <div><a href="#"><i class="bi bi-linkedin"></i></a></div>
-                <div><a href="#"><i class="bi bi-facebook"></i></a></div>
-                <div><a href="#"><i class="bi bi-instagram"></i></a></div>
-            </div>
+            {% include "inc/social-links.html" %}
         </div>
     </div>
 </section>
