--- a/templates/write-testimonial.html
+++ b/templates/write-testimonial.html
@@ -21,7 +21,7 @@
         </g>
     </svg>
     <div class="container-xl">
-        {% include "breadcrumbs.html" %}
+        {% include "inc/breadcrumbs.html" %}
         <div class="row justify-content-center">
             <div class="col-md-8 testimonial-form-container">
                 <div class="card card-testimonial-form">
