--- a/templates/base.html
+++ b/templates/base.html
@@ -7,13 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="{{ settings.meta_desc }}" />
     <meta name="keywords" content="{{ settings.meta_keys }}" />
+    <meta name="author" content="Paul Istratoaie">
     <meta name="theme-color" content="#168fd6">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" type="text/css">
     {% block styles %}
     {% endblock styles %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-    <title>{{ settings.meta_title }}</title>
+    <title>{{ settings.meta_title }}- {% block title %} {% endblock title %}</title>
 </head>
 <body class="d-flex flex-column h-100">
     <nav class="navbar bg-accent-transparent navbar-expand-md sticky-top">
