--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+{{ post.title }}
+{% endblock title %}
 {% block content %}
 <!-- Blog Post SECTION -->
 <section id="blog-post">
