--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+Blog
+{% endblock title %}
 {% block content %}
 <!-- Blogs SECTION -->
 <section id="blogs">
