--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+Contact
+{% endblock title %}
 {% block content %}
 <!-- Contact SECTION -->
 <section id="contact">
@@ -29,24 +32,24 @@
                         <i class="bi bi-person-circle"></i>
                         <h4 class="card-title">Contact Info</h4>
                         <p class="card-text">
-                            <dl class="row">
-                                <dt class="col-5">Email</dt>
-                                <dd class="col-7">{{ settings.email }}</dd>
+                        <dl class="row">
+                            <dt class="col-5">Email</dt>
+                            <dd class="col-7">{{ settings.email }}</dd>
 
-                                <dt class="col-5">Telephone</dt>
-                                <dd class="col-7">{{ settings.phone }}</dd>
+                            <dt class="col-5">Telephone</dt>
+                            <dd class="col-7">{{ settings.phone }}</dd>
 
-                                <dt class="col-5">Address</dt>
-                                <dd class="col-7">{{ settings.address }}</dd>
-                            </dl>
+                            <dt class="col-5">Address</dt>
+                            <dd class="col-7">{{ settings.address }}</dd>
+                        </dl>
                         </p>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 contact-form-container">
                 <!-- CREDIT: https://codepen.io/xyzzyestudioweb/pen/JgdKOR -->
-                <svg class="separator d-block d-md-none m-0" xmlns="http://www.w3.org/2000/svg" width="100%" height="100" viewBox="0.4 0.2 200 44"
-                    preserveAspectRatio="none">
+                <svg class="separator d-block d-md-none m-0" xmlns="http://www.w3.org/2000/svg" width="100%"
+                    height="100" viewBox="0.4 0.2 200 44" preserveAspectRatio="none">
                     <g class="separator" transform="translate(-9.2218046,-83.494585)">
                         <path class="fill-accent"
                             d="M 9.484815,89.716055 H 209.81018 V 126.90507 L 110.46368,93.705147 9.579391,127.39334 Z" />
@@ -59,19 +62,23 @@
                         <h4 class="card-title">Send me an email</h4>
                         <form class="d-grid">
                             <div class="form-floating">
-                                <input class="form-control" type="text" id="name" name="name" placeholder="Your Name" aria-label="Name field">
+                                <input class="form-control" type="text" id="name" name="name" placeholder="Your Name"
+                                    aria-label="Name field">
                                 <label for="name">Your Name</label>
                             </div>
                             <div class="form-floating">
-                                <input class="form-control" type="email" id="email" name="email" placeholder="Email Address" aria-label="Email field">
+                                <input class="form-control" type="email" id="email" name="email"
+                                    placeholder="Email Address" aria-label="Email field">
                                 <label for="name">Email Address</label>
                             </div>
                             <div class="form-floating">
-                                <input class="form-control" type="text" id="subject" name="subject" placeholder="Subject" aria-label="Subject field">
+                                <input class="form-control" type="text" id="subject" name="subject"
+                                    placeholder="Subject" aria-label="Subject field">
                                 <label for="subject">Subject</label>
                             </div>
                             <div class="form-floating">
-                                <textarea class="form-control" rows="3" id="message" name="message" placeholder="Your message here..." aria-label="Message field"></textarea>
+                                <textarea class="form-control" rows="3" id="message" name="message"
+                                    placeholder="Your message here..." aria-label="Message field"></textarea>
                                 <label for="message">Your message</label>
                             </div>
                             <button type="submit" class="btn btn-lg btn-accent bg-accent">Send</button>
