--- a/templates/write-testimonial.html
+++ b/templates/write-testimonial.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+Write a testimonial
+{% endblock title %}
 {% block content %}
 <!-- WriteTestimonial SECTION -->
 <section id="write-testimonial">
