--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -121,6 +121,24 @@
             </nav>
 
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+                <!-- flash messages -->
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        <div class="toast-container position-absolute top-1 start-50 translate-middle-x p-3 w-75" style="z-index: 5">
+                        {% for message in messages %}
+                            <div class="d-flex w-100 toast" role="alert" aria-live="assertive" aria-atomic="true">
+                                <span class="m-auto px-2">
+                                    <i class="bi bi-bell-fill"></i>
+                                </span>
+                                <div class="toast-body">
+                                    <h4>{{ message }}</h4>
+                                </div>
+                                <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i class="bi bi-x-circle"></i></a>
+                            </div>
+                        {% endfor %}
+                        </div>
+                    {% endif %}
+                {% endwith %}
                 {% block content %}
                 
                 {% endblock content %}
@@ -130,7 +148,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='js/admin.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 
 </html>
