--- a/templates/base.html
+++ b/templates/base.html
@@ -9,18 +9,23 @@
     <meta name="keywords" content="{{ settings.meta_keys }}" />
     <meta name="author" content="Paul Istratoaie">
     <meta name="theme-color" content="#168fd6">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" type="text/css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous"
+        type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
+        type="text/css">
     {% block styles %}
     {% endblock styles %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     <title>{{ settings.meta_title }}- {% block title %} {% endblock title %}</title>
 </head>
+
 <body class="d-flex flex-column h-100">
     <nav class="navbar bg-accent-transparent navbar-expand-md sticky-top">
         <div class="container-xxl">
             <a class="navbar-brand" href="{{ url_for('home') }}">{&pi;} Dev.PI</a>
-            <button class="navbar-toggler text-shadow" id="navbar-toggler" type="button" aria-label="Toggle navigation" data-toggle="offcavas">
+            <button class="navbar-toggler text-shadow" id="navbar-toggler" type="button" aria-label="Toggle navigation"
+                data-toggle="offcavas">
                 <i class="bi bi-list"></i>
             </button>
             <div class="navbar-collapse offcanvas-collapse" id="navbarCollapse">
@@ -29,18 +34,22 @@
                         <a class="nav-link active" href="{{ url_for('home') }}" data-toggle="offcavas">Home</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             Résumé
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{{ url_for('home') }}#skills" data-toggle="offcavas">Skills</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('home') }}#education" data-toggle="offcavas">Education</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('home') }}#experience" data-toggle="offcavas">Experience</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('home') }}#skills"
+                                    data-toggle="offcavas">Skills</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('home') }}#education"
+                                    data-toggle="offcavas">Education</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('home') }}#experience"
+                                    data-toggle="offcavas">Experience</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('home') }}#testimonials" data-toggle="offcavas">Testimonials</a>
+                        <a class="nav-link" href="{{ url_for('home') }}#testimonials"
+                            data-toggle="offcavas">Testimonials</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('portfolio') }}" data-toggle="offcavas">Portfolio</a>
@@ -58,33 +67,37 @@
     <main class="flex-shrink-0">
         <!-- flash messages -->
         {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                <div class="toast-container position-fixed top-1 start-50 translate-middle-x p-3 w-75" style="z-index: 5">
-                {% for message in messages %}
-                    <div class="d-flex w-100 toast" role="alert" aria-live="assertive" aria-atomic="true">
-                        <i class="bi bi-bell-fill"></i>
-                        <div class="toast-body">
-                            <h4>{{ message }}</h4>
-                        </div>
-                        <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i class="bi bi-x-circle"></i></a>
-                    </div>
-                {% endfor %}
+        {% if messages %}
+        <div class="toast-container position-fixed top-1 start-50 translate-middle-x p-3 w-75" style="z-index: 5">
+            {% for message in messages %}
+            <div class="d-flex w-100 toast" role="alert" aria-live="assertive" aria-atomic="true">
+                <span class="m-auto px-2">
+                    <i class="bi bi-bell-fill"></i>
+                </span>
+                <div class="toast-body">
+                    <h4>{{ message }}</h4>
                 </div>
-            {% endif %}
+                <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i
+                        class="bi bi-x-circle"></i></a>
+            </div>
+            {% endfor %}
+        </div>
+        {% endif %}
         {% endwith %}
-            {% block content %}
-            {% endblock content %}
+        {% block content %}
+        {% endblock content %}
     </main>
     <footer class="footer mt-auto">
         <!-- CREDIT: https://codepen.io/webd3v/pen/JbJvMQ -->
-        <svg class="footer-separator" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 100 100" preserveAspectRatio="none">
-			<path d="M0 100 C40 0 60 0 100 100 Z"></path>
-		</svg>
+        <svg class="footer-separator" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 100 100"
+            preserveAspectRatio="none">
+            <path d="M0 100 C40 0 60 0 100 100 Z"></path>
+        </svg>
         {% include "inc/social-links.html" %}
         <div class="container-xxl">
             <div class="row">
                 <div class="col-md-6 text-center d-flex flex-column justify-content-center">
-                    <h3 class="text-shadow mt-3 mb-4">Thank you for visiting!</h3>    
+                    <h3 class="text-shadow mt-3 mb-4">Thank you for visiting!</h3>
                     <p class="d-none d-md-block">2021 &#169; Paul Istratoaie</p>
                 </div>
                 <div class="col-sm-6 col-md-3">
@@ -103,7 +116,8 @@
                         <li class="list-group-item"><a href="{{ url_for('blog') }}">Blog</a></li>
                         <li class="list-group-item"><a href="{{ url_for('contact') }}">Contact</a></li>
                         <li class="list-group-item"><a href="{{ url_for('home') }}#testimonials">Testimonials</a></li>
-                        <li class="list-group-item"><a href="{{ url_for('add_testimonial') }}">Write Testimonial</a></li>
+                        <li class="list-group-item"><a href="{{ url_for('add_testimonial') }}">Write Testimonial</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -115,7 +129,9 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
     {% block scripts %}
     {% endblock scripts %}
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
