feat(admin): add logout functionality and wire up button from admin panel

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -32,6 +32,10 @@ main {
     padding: 0 .5rem;
 }
 
+.navbar-nav .nav-item .nav-link {
+    padding: .5rem;
+}
+
 /*------------------------------------------ SIDEBAR */
 
 .sidebar {
