--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -29,10 +29,10 @@
         </button>
         <ul class="d-none d-md-flex navbar-nav px-3">
             <li class="nav-item text-nowrap">
-                <a class="nav-link" href="{{ url_for('home') }}">App</a>
+                <a class="nav-link" href="{{ url_for('home') }}"><i class="bi bi-globe"></i> App</a>
             </li>
             <li class="nav-item text-nowrap">
-                <a class="nav-link" href="#">Sign out</a>
+                <a class="nav-link" href="{{ url_for('logout') }}"><i class="bi bi-door-open"></i> Log out</a>
             </li>
         </ul>
     </header>
@@ -111,7 +111,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">
+                            <a class="nav-link" aria-current="page" href="{{ url_for('logout') }}">
                                 <i class="bi bi-door-open"></i>
                                 Sign Out
                             </a>
