feat(admin): create and style testimonials list in admin with controls on list (unwired)

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     {% block styles %}
     {% endblock styles %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-    <title>{{ settings.meta_title }}- {% block title %} {% endblock title %}</title>
+    <title>{{ settings.meta_title }} {% block title %} {% endblock title %}</title>
 </head>
 
 <body class="d-flex flex-column h-100">
