--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-Contact
+- Contact
 {% endblock title %}
 {% block content %}
 <!-- Contact SECTION -->
