--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -43,15 +43,15 @@
                 <div class="sidebar-sticky pt-3">
                     <ul class="nav flex-column mb-2">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">
-                                <i class="bi bi-house"></i>
+                            <a class="nav-link" aria-current="page" href="{{ url_for('admin') }}">
+                                <i class="bi bi-speedometer2"></i>
                                 Dashboard
                             </a>
                         </li>
                     </ul>
                     <ul class="nav flex-column mb-2">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">
+                            <a class="nav-link" aria-current="page" href="{{ url_for('get_testimonials') }}">
                                 <i class="bi bi-chat-right-quote"></i>
                                 Testimonials
                             </a>
