--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %}
 {% block content %}
 <section id="dashboard">
-    <h2>Section title</h2>
+    <h2>Dashboard</h2>
     content
-</section>  
+</section>
 {% endblock content %}
