--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-{{ post.title }}
+- {{ post.title }}
 {% endblock title %}
 {% block content %}
 <!-- Blog Post SECTION -->
