--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-Portfolio
+- Portfolio
 {% endblock title %}
 {% block content %}
 <!-- Projects SECTION -->
