--- a/templates/project.html
+++ b/templates/project.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-Project: {{ project.title }}
+- Project: {{ project.title }}
 {% endblock title %}
 {% block styles %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
