--- a/templates/write-testimonial.html
+++ b/templates/write-testimonial.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-Write a testimonial
+- Write a testimonial
 {% endblock title %}
 {% block content %}
 <!-- WriteTestimonial SECTION -->
